Fixing alignment of middle container

--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -53,6 +53,7 @@
 
 .middle-tag-line {
   text-align: center;
+  color: white;
 }
 
 .cart-home-img {
